# ChangeLog for app-admin/logclean
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header $

logclean-7.6 (21 Dec 2011)

  21 Nov 2011; Martin Väth <martin@mvath.de>
  Suppose IUSE=eix

  21 Nov 2011; Martin Väth <martin@mvath.de>
  New ebuild from scratch.
