@@ -1,1 +1,1 @@
-DIST logclean-7.6.tar.gz 6375 RMD160 3ca3db6770dcb0ae399d6d1965524b6d8117ff50 SHA1 848cc819aa39b7db2489c1fefdb419ffc7dc6e27 SHA256 76ae2691a61aa380c7dc623a569566d7bef12f3463819a241f29cc4a41504999
+DIST logclean-7.7.tar.gz 6459 RMD160 f9ed65e86c842c8d76104a553609540fdf38043d SHA1 c864feed4882a236f92e9c49ba1b33e635213b06 SHA256 2bf49c97cf2bca0158f373ed8d4b5be8c40e568f69c5597f6272cc94b4fd6727
