@@ -1,0 +1,8 @@
+# ChangeLog for app-portage/world-mv
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header $
+
+world-mv-3.0 (07 Jan 2012)
+
+  07 Jan 2012; Martin Väth <martin@mvath.de>
+  New ebuild from scratch.
