@@ -1,6 +1,11 @@
 # ChangeLog for app-admin/logclean
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header $
+
+logclean-7.7 (07 Jan 2012)
+
+  07 Jan 2012; Martin Väth <martin@mvath.de>
+  Version bump, remove old ebuild. Fix dependencies
 
 logclean-7.6 (21 Dec 2011)
 
